dynamically_typed_tests/invalid/read/readTypeErr01.wacc
# read into pair type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  p = newpair(1,2);
  read p
end

